_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -56,7 +56,7 @@ $theme-palettes: (
     secondary: #f83600
   ),
   purple: (
-    primary:   #653cad,
+    primary:   #DB335B,
     secondary: #8662c7
   )
 );
