--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -56,7 +56,7 @@ $theme-palettes: (
     secondary: #f83600
   ),
   purple: (
-    primary:   #0780A8,
+    primary:   #653cad,
     secondary: #8662c7
   )
 );
