_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -2,7 +2,7 @@
 $font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace !default;
 
 // Colors
-$color-primary:   #DB335B !default;
+$color-primary:   #0780A8 !default;
 $color-secondary: #00c6ff !default;
 
 $gray-100:        #f7f9fb !default;
