--- a/src/sass/imports/_palettes.scss
+++ b/src/sass/imports/_palettes.scss
@@ -40,7 +40,7 @@
     }
 
     .bg-accent {
-      background: $color-primary;
+      background: #DB335B;
       //background: -webkit-gradient(linear, left top, right top, from($color-primary), to($color-secondary));
       //background: linear-gradient(to right,$color-primary, $color-secondary);
 
