--- a/src/sass/imports/_palettes.scss
+++ b/src/sass/imports/_palettes.scss
@@ -40,7 +40,9 @@
     }
 
     .bg-accent {
-      background: #DB335B;
+      background: $color-primary;
+      background: -webkit-gradient(linear, left top, right top, from($color-primary), to($color-secondary));
+      background: linear-gradient(to right,$color-primary, $color-secondary);
 
       .button {
         color: $color-primary;
