--- a/src/sass/imports/_general.scss
+++ b/src/sass/imports/_general.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background: $gray-100;
+  background: #ffffff;
   color: $gray-600;
   line-height: 1.66667;
   -webkit-font-smoothing: antialiased;
