--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -42,6 +42,9 @@ $theme-fonts: (
   system-sans: (-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif)
 );
 
+$font-header: ;
+$font-body: ;
+
 $theme-palettes: (
   cyan: (
     primary:   #2cb1bc,
