_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -43,8 +43,7 @@ $theme-fonts: (
 );
 
 $font-body: font-family: 'Open Sans', sans-serif;
-font-family: 'Poppins', sans-serif;
-$font-body: ;
+$font-header: 'Poppins', sans-serif;
 
 $theme-palettes: (
   cyan: (
