--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -42,7 +42,7 @@ $theme-fonts: (
   system-sans: (-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif)
 );
 
-$font-body: font-family: 'Open Sans', sans-serif;
+$font-body: 'Open Sans', sans-serif;
 $font-header: 'Poppins', sans-serif;
 
 $theme-palettes: (
