--- a/src/sass/imports/_general.scss
+++ b/src/sass/imports/_general.scss
@@ -37,7 +37,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: $font-
+    font-family: $font-header;
   color: $gray-700;
   font-weight: bold;
   line-height: 1.16667;
