_general.scss: changed

--- a/src/sass/imports/_general.scss
+++ b/src/sass/imports/_general.scss
@@ -6,6 +6,7 @@ body {
   background: #ffffff;
   color: $gray-700;
   line-height: 1.66667;
+  font-family: $font-body;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
