--- a/src/sass/imports/_buttons.scss
+++ b/src/sass/imports/_buttons.scss
@@ -6,7 +6,7 @@
   border-radius: $border-radius;
   box-sizing: border-box;
   color: #fff;
-    //font-family: $font-header;
+    font-family: $font-header;
 
   cursor: pointer;
   display: -ms-inline-flexbox;
