_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -43,7 +43,7 @@ $theme-fonts: (
 );
 
 $font-body: 'Open Sans', sans-serif;
-$font-header: 'Poppins', sans-serif;
+$font-header: 'Roboto', sans-serif;
 
 $theme-palettes: (
   cyan: (
